# sapp

./: .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.yml  managed-cert.yaml  sapp-ingress.yaml  service.yaml
.github/workflows/: deploy.yml
backend/: .env.example  CoinABI.json  CoinBytecode.txt  ai.py  coin_model.py  coins.py  const.py  create_token.py  data.py  database.py  failed_sentiment_addresses.txt  init_db.py  main.py  metadata.json  models.py  pyproject.toml  requirements.txt  seed.py  svr_best_model.pkl
backend/dataset/: complete_dataset.csv  data.csv  data_with_roi.csv  data_with_roi_updated.csv  data_with_synthetic_roi.csv  dataset.csv  example_data.csv  example_data_2.csv  example_data_3.csv  last_traded.csv  test_data.csv  top_gainer.csv  top_vol_24h.csv
backend/routers/: analyze.py  reports.py  users.py
frontend/: .env  components.json  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.css  main.tsx  routeTree.gen.ts
frontend/src/components/: About.tsx  Cta.tsx  FAQ.tsx  Features.tsx  Footer copy.tsx  Footer.tsx  Hero.tsx  HeroCards.tsx  HowItWorks.tsx  Icons.tsx  Nav.tsx  Navbar.tsx  Newsletter.tsx  Pricing.tsx  ScrollToTop.tsx  Services.tsx  Sponsors.tsx  Statistics.tsx  Team.tsx  Testimonials.tsx  app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  mode-toggle.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  reports.tsx  section-cards.tsx  site-header.tsx  theme-provider.tsx
frontend/src/components/dashboard/: dashboard.tsx
frontend/src/components/index/: About.tsx  Cta.tsx  FAQ.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Pricing.tsx  ScrollToTop.tsx  Statistics.tsx
frontend/src/components/ui/: accordion.tsx  calendar.tsx  chart.tsx  command.tsx  dialog.tsx  drawer.tsx  form.tsx  hover-card.tsx  menubar.tsx  resizable.tsx  select.tsx  sheet.tsx  sidebar.tsx  toggle.tsx  tooltip.tsx
frontend/src/context/: ProtectedRouteContext.tsx
frontend/src/lib/: api.ts
frontend/src/lib/api/: ai.ts  analysis.ts  auth.ts  profile.ts
frontend/src/routes/: __root.tsx  index.tsx  login.tsx  register.tsx
frontend/src/routes/app/: analyse-coin.tsx  analyse-profile.tsx  generate-ideas.tsx  index.tsx  reports.tsx
frontend/src/routes/app/reports/: $reportId.tsx  index.tsx
sam/sapp/: README.md  samconfig.toml  template.yaml
sam/sapp/hello-world/: app.ts  events.json  package-lock.json  package.json
