[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.28",
    "mcp>=1.6.0",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "typer>=0.15.2",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "passlib>=1.7.4",
    "jwt>=1.3.1",
    "pyjwt>=2.10.1",
    "pandas>=2.2.3",
    "joblib>=1.4.2",
    "transformers>=4.51.2",
    "scikit-learn>=1.6.1",
    "bcrypt>=4.3.0",
]
