[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.12",
    "langchain==0.3.23",
    "langchain-openai==0.3.12",
    "langchain-community==0.3.21",
    "langgraph==0.3.28",
    "mcp>=1.6.0",
    "pydantic==2.11.3",
    "requests==2.32.3",
    "typer==0.15.2",
    "sqlalchemy==2.0.40",
    "psycopg2-binary>=2.9.10",
    "passlib==1.7.4",
    "jwt==1.3.1",
    "pyjwt>=2.10.1",
    "pandas==2.2.3",
    "joblib==1.4.2",
    "transformers==4.51.2",
    "scikit-learn==1.6.1",
    "bcrypt>=4.3.0",
    "python-jose==3.4.0",
    "torch==2.6.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "bitarray==3.3.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "ckzg==2.1.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "cytoolz==1.0.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "ecdsa==0.19.1",
    "filelock==3.18.0",
    "frozenlist==1.5.0",
    "fsspec==2025.3.2",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "hexbytes==1.3.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-core==0.3.51",
    "langchain-text-splitters==0.3.8",
    "langgraph-checkpoint==2.0.24",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.61",
    "langsmith==0.3.30",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "openai==1.72.0",
    "orjson==3.10.16",
    "ormsgpack==1.9.1",
    "packaging==24.2",
    "parsimonious==0.10.0",
    "pip==25.0.1",
    "propcache==0.3.1",
    "psycopg2==2.9.10",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "pydantic-core==2.33.1",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyunormalize==16.0.0",
    "pywin32==310",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rlp==4.1.0",
    "rsa==4.9",
    "safetensors==0.5.3",
    "scipy==1.15.2",
    "setuptools==65.5.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "sympy==1.13.1",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "toolz==1.0.0",
    "tqdm==4.67.1",
    "types-requests==2.32.0.20250328",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uv==0.6.14",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
    "xxhash==3.5.0",
    "yarl==1.19.0",
    "zstandard==0.23.0",
]
